--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "hello-world-react-website",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@octokit/rest": "^18.10.0",
+    "openai": "^3.0.1",
+    "dotenv": "^10.0.0",
+    "fs-extra": "^10.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
