--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -22,10 +22,12 @@ jobs:
 
       - name: Install dependencies
         run: npm install @octokit/rest openai dotenv fs-extra
-
+     
       - name: Run Auto-PR Script
         run: node .github/scripts/auto-pr.mjs
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
+          GIT_NAME: ${{ secrets.GIT_NAME }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           REPO: ${{ github.repository }}
