--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@octokit/rest": "^20.1.1",
+    "dotenv": "^16.4.7",
+    "fs-extra": "^11.3.0",
+    "openai": "^4.85.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@octokit/rest": "^20.0.0",
-    "openai": "^4.0.0",
-    "dotenv": "^16.0.0",
-    "fs-extra": "^11.0.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
